Basic banner is showing if website is blacklisted TODO: Working banner defining a timeout

--- a/popup.html
+++ b/popup.html
@@ -21,6 +21,7 @@
 				font-weight: bold;
 			}
 			#url{display:none;}
+			a{color:#878787;}
 		</style>
 	</head>
 	<center><img src="img/icon.png" height="32px"></center>
@@ -29,8 +30,10 @@
 	<br><br>
 
 	<button id="addrm"> </button><br>
-	<button id="settings">Settings</button><br>
+
+	<hr>
+	You like the extension? Visit <a href="https://www.joshua.ovh/" target="_blank">my homepage and send me a mail</a>!
+
 
 	<script src="popup.js"></script>
-	<span id="url"></span>
 </html>
